--- a/sites/all/themes/rebound/sass/_views.scss
+++ b/sites/all/themes/rebound/sass/_views.scss
@@ -542,12 +542,18 @@
 .view-news,
 .view-news-page,
 .view-events,
-.view-event
+.view-event,
+.view-archived-newsletters
 {
     .views-row
     {
         clear: both;
         margin-bottom: 40px;
+        
+        &:last-child
+        {
+            margin-bottom: 0;
+        }
     }
     
     .views-field-field-image
@@ -593,17 +599,21 @@
         }
     }
     
-    .views-field-title a
+    .views-field-title
     {
-        color: white;
-        text-decoration: none;
         text-transform: uppercase;
         margin-bottom: 5px;
-        display: block;
         
-        &:hover
+        a
         {
-            text-decoration: underline;
+            color: white;
+            text-decoration: none;
+            display: block;
+            
+            &:hover
+            {
+                text-decoration: underline;
+            }
         }
     }
     
@@ -720,6 +730,54 @@
         padding-left: 0;
         display: block;
         text-align: center;
+    }
+}
+.view-archived-newsletters
+{
+    .views-row
+    {
+        padding-left: 31px;
+        font-weight: bold;
+        position: relative;
+        margin-right: 80px;
+        
+        &::before
+        {
+            content: "";
+            display: block;
+            position: absolute;
+            border-style: solid;
+            border-width: 31px 31px 31px 0;
+            border-color: transparent $blue-navy transparent transparent;
+            left: 0;
+            top: 0;
+        }
+        
+        & > div
+        {
+            background: $blue-navy;
+            overflow: hidden;
+            padding: 15px;
+        }
+    }
+    
+    .views-field-field-pdf
+    {
+        padding-left: 75px;
+        
+        a
+        {
+            display: inline-block;
+            color: white;
+            padding-right: 24px;
+            background: url(../img/chevron-right.png) no-repeat right center;
+            text-decoration: none;
+            
+            &:hover
+            {
+                text-decoration: underline;
+            }
+        }
     }
 }
 
@@ -1371,5 +1429,185 @@
     {
         color: $blue-light;
         background-image: url(../img/chevron-up-blue.png);
+    }
+}
+
+.view-annual-reports
+{    
+    .views-row
+    {
+        position: relative;
+        margin-bottom: 40px;
+        
+        &.views-row-last
+        {
+            margin-bottom: 0;
+        }
+        
+        &::before
+        {
+            content: "";
+            display: block;
+            float: left;
+            width: 0px;
+            height: 0px;
+            border-style: solid;
+            border-width: 31px 31px 31px 0;
+            border-color: transparent $blue-navy transparent transparent;
+        }
+        
+        & > div
+        {
+            overflow: hidden;
+            background: $blue-navy;
+            min-height: 32px;
+            padding: 15px 20px;
+        }
+    }
+    
+    .views-field-title
+    {
+        margin-bottom: 5px;
+    }
+    
+    .views-field-field-pdf
+    {
+        a
+        {
+            display: inline-block;
+            text-decoration: none;
+            color: white;
+            padding-right: 24px;
+            background: url(../img/chevron-right.png) no-repeat right center;
+            font-weight: bold;
+            margin-top: 0.75em;
+            
+            &:hover
+            {
+                border-bottom: 1px solid white;
+                margin-bottom: -1px;
+            }
+        }
+    }
+}
+.view-financial-statements
+{
+    .view-header .page-title
+    {
+        margin-top: 40px;
+    }
+}
+
+.view-i-am-rebound
+{
+    .views-row
+    {
+        overflow: hidden;
+        background: $blue-light;
+        padding: 20px;
+        margin-top: 40px;
+    }
+    
+    .views-field-title
+    {
+        text-transform: uppercase;
+        font-weight: bold;
+        font-size: 2em;
+        border-bottom: 4px solid white;
+        width: 200px;
+        float: left;
+        margin-right: 75px;
+    }
+    
+    .views-field-field-image img
+    {
+        display: block;
+        width: 180px;
+        height: 180px;
+        border-radius: 100px;
+        border: 4px solid white;
+        float: left;
+        margin-top: 25px;
+        clear: left;
+        margin-right: 87px;
+    }
+    
+    .views-field-body
+    {
+        position: relative;
+        
+        &::before
+        {
+            content: "";
+            display: block;
+            position: absolute;
+            top: 0;
+            left: 244px;
+            width: 0px;
+            height: 0px;
+            border-style: solid;
+            border-width: 31px 31px 31px 0;
+            border-color: transparent $blue-navy transparent transparent;
+        }
+        
+        & > div
+        {
+            overflow: hidden;
+            background: $blue-navy;
+            padding: 15px;
+        }
+    }
+    
+    .views-field-field-youtube-video-id
+    {
+        padding-left: 275px;
+        padding-top: 20px;
+
+        & > div
+        {
+            position: relative;
+            cursor: pointer;
+            
+            &::after
+            {
+                content: "";
+                position: absolute;
+                left: 0;
+                top: 0;
+                right: 0;
+                bottom: 0;
+                background: url(../img/icon-play.png) no-repeat center center;
+            }
+            &:hover::after
+            {
+                background-image: url(../img/icon-play-red.png);
+            }
+        }
+        &.open > div
+        {
+            &::after
+            {
+                display: none;
+            }
+            
+            &.field-content
+            {
+                padding-bottom: 56.25%;
+            }
+        }
+        
+        img
+        {
+            display: block;
+            width: 100%;
+        }
+        iframe
+        {
+            position: absolute;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+        }
     }
 }
