--- a/sites/all/themes/rebound/sass/_views.scss
+++ b/sites/all/themes/rebound/sass/_views.scss
@@ -72,6 +72,16 @@
         max-width: 180px;
         padding-bottom: 3px;
     }
+    
+    .views-field-field-link a
+    {
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        z-index: 1;
+    }
 }
 .view-about-us-row.views-row-1
 {
