--- a/sites/all/themes/rebound/sass/_views.scss
+++ b/sites/all/themes/rebound/sass/_views.scss
@@ -81,6 +81,7 @@
         width: 100%;
         height: 100%;
         z-index: 1;
+        text-decoration: none;
     }
 }
 .view-about-us-row.views-row-1
@@ -559,11 +560,6 @@
     {
         clear: both;
         margin-bottom: 40px;
-        
-        &:last-child
-        {
-            margin-bottom: 0;
-        }
     }
     
     .views-field-field-image
