--- a/sites/all/themes/rebound/sass/_views.scss
+++ b/sites/all/themes/rebound/sass/_views.scss
@@ -174,7 +174,7 @@
             display: block;
             position: absolute;
             top: 20px;
-            left: 269px;
+            left: 244px;
             width: 0px;
             height: 0px;
             border-style: solid;
@@ -513,17 +513,20 @@
             {
                 border: 2px solid white;
                 border-radius: 30px;
+                margin: -24px 0 0 0;
             }
         }
         .arrow-left
         {
             background-image: url(../img/arrow-left.png);
             left: 0;
+            margin-left: 2px;
         }
         .arrow-right
         {
             background-image: url(../img/arrow-right.png);
             right: 0;
+            margin-right: 2px;
         }
         
         ul
@@ -560,6 +563,10 @@
     {
         clear: both;
         margin-bottom: 40px;
+    }
+    .views-row-last
+    {
+        margin-bottom: 0;
     }
     
     .views-field-field-image
@@ -742,22 +749,9 @@
 {
     .views-row
     {
-        padding-left: 31px;
         font-weight: bold;
         position: relative;
         margin-right: 80px;
-        
-        &::before
-        {
-            content: "";
-            display: block;
-            position: absolute;
-            border-style: solid;
-            border-width: 31px 31px 31px 0;
-            border-color: transparent $blue-navy transparent transparent;
-            left: 0;
-            top: 0;
-        }
         
         & > div
         {
@@ -1444,7 +1438,7 @@
 }
 
 .view-annual-reports
-{    
+{
     .views-row
     {
         position: relative;
@@ -1453,18 +1447,6 @@
         &.views-row-last
         {
             margin-bottom: 0;
-        }
-        
-        &::before
-        {
-            content: "";
-            display: block;
-            float: left;
-            width: 0px;
-            height: 0px;
-            border-style: solid;
-            border-width: 31px 31px 31px 0;
-            border-color: transparent $blue-navy transparent transparent;
         }
         
         & > div
@@ -1523,11 +1505,15 @@
     {
         text-transform: uppercase;
         font-weight: bold;
-        font-size: 2em;
         border-bottom: 4px solid white;
         width: 200px;
         float: left;
         margin-right: 75px;
+        
+        h2
+        {
+            font-size: 2.5em;
+        }
     }
     
     .views-field-field-image img
