--- a/sites/all/themes/rebound/sass/_responsive.scss
+++ b/sites/all/themes/rebound/sass/_responsive.scss
@@ -77,9 +77,14 @@
 
 @media screen and (max-width:800px)
 {
-    .page-title h1
+    .page-title
     {
-        display: block;
+        text-align: center;
+        
+        h1
+        {
+            display: inline-block;
+        }
     }
     
     .footer
@@ -120,7 +125,7 @@
             left: 20px;
             right: 20px;
             
-            &::before
+            &:before
             {
                 display: none;
             }
@@ -138,7 +143,7 @@
             margin-top: 48px;
             overflow: visible;
             
-            &::before
+            &:before
             {
                 content: "";
                 display: block;
@@ -179,10 +184,16 @@
         {
             margin-right: 28px;
         }
-        .body-container::before
+        .body-container
         {
-            border-width: 28px 28px 28px 0;
-            left: 230px;
+            margin-left: -20px;
+            margin-right: -20px;
+            
+            &:before
+            {
+                border-width: 28px 28px 28px 0;
+                left: 230px;
+            }
         }
     }
     
@@ -196,7 +207,7 @@
             width: auto;
             text-align: center;
         }
-        .region-content::before
+        .region-content:before
         {
             border-width: 0 28px 28px 28px;
             border-color: transparent transparent $blue-navy transparent;
@@ -225,7 +236,7 @@
             background-position: top left;
         }
         
-        .views-field-the-rest::before
+        .views-field-the-rest:before
         {
             border-width: 28px 28px 28px 0;
             left: 172px;
@@ -266,7 +277,7 @@
             padding-top: 115px;
             min-height: 0;
             
-            &::before
+            &:before
             {
                 border-width: 0 28px 28px 28px;
                 border-color: transparent transparent $blue-navy transparent;
@@ -303,12 +314,12 @@
             margin-top: 0;
             margin-right: 48px;
         }
-        .views-field-body::before
+        .views-field-body:before
         {
             border-width: 28px 28px 28px 0;
             left: 208px;
         }
-        .views-field-title + .views-field-body::before
+        .views-field-title + .views-field-body:before
         {
             position: static;
             margin: 0 auto;
@@ -323,7 +334,7 @@
     
     body.contact-us .page-title
     {
-        &::after
+        &:after
         {
             display: none;
         }
@@ -366,5 +377,557 @@
     .view-photo-circles .views-field-field-image img
     {
         opacity: 1;
+    }
+    #block-block-13
+    {
+        display: none;
+    }
+}
+
+
+
+@media screen and (max-width:680px)
+{
+    #block-system-main-menu
+    {
+        .content ul
+        {
+            padding: 0;
+            margin: 0;
+            background: $blue-light;
+            width: 180px;
+            
+            li
+            {
+                display: block;
+                margin: 0;
+                padding: 0;
+                max-width: none;
+                text-align: right;
+                border-top: 1px solid white;
+                
+                &:hover
+                {
+                    border-bottom: 0;
+                }
+            }
+            a
+            {
+                display: table-cell;
+                width: 180px;
+                height: 50px;
+                padding: 0 10px;
+                font-size: 1.2em;
+                
+                &:hover,
+                &:focus
+                {
+                    background: $blue-medium;
+                }
+            }
+        }
+        
+    }
+    .navigation
+    {
+        .region-navigation
+        {
+            opacity: 0;
+            position: absolute;
+            right: -200px;
+            top: 99px;
+            box-shadow: -2px 2px 3px rgba(0,0,0,0.3);
+            transition: right 0.4s, opacity, 0.4s;
+        }
+        .social
+        {
+            position: static;
+            width: auto;
+            height: 50px;
+            padding: 10px 10px 0 0;
+            background: $blue-light;
+            border-top: 1px solid white;
+            
+            &:before,
+            &:after
+            {
+                display: none;
+            }
+            
+            .content a
+            {
+                width: 40px;
+                height: 40px;
+                background-size: 100% 100%;
+                vertical-align: top;
+                margin-left: 16px;
+                
+                &.facebook
+                {
+                    background-image: url(../img/icon-facebook-large.png);
+                }
+                &.twitter
+                {
+                    background-image: url(../img/icon-twitter-large.png);
+                }
+            }
+        }
+        .address,
+        .phone
+        {
+            display: none;
+        }
+        .btn-menu
+        {
+            display: block;
+            width: 84px;
+            height: 99px;
+            background: url(../img/btn-menu.png) no-repeat center center;
+            background-size: 42px 42px;
+            font-size: 0;
+            text-decoration: none;
+            position: absolute;
+            top: 0;
+            right: 0;
+        }
+    }
+    body.open-menu
+    {
+        .navigation
+        {
+            background: $blue-light;
+            
+            .region-navigation
+            {
+                right: 0;
+                opacity: 1;
+            }
+        }
+    }
+    
+    .footer
+    {
+        padding-top: 100px;
+        
+        &>div>div>div
+        {
+            min-height: 190px;
+        }
+        
+        .logo
+        {
+            background: none;
+            
+            &:before,
+            &:after
+            {
+                display: none;
+            }
+            
+            img
+            {
+                top: 0;
+            }
+        }
+        .newsletter
+        {
+            display: none;
+        }
+        .logos
+        {
+            top: -100px;
+            right: 0;
+            width: 100%;
+            text-align: center;
+            padding-top: 20px;
+            
+            a
+            {
+                display: inline-block;
+                vertical-align: top;
+                margin: 0 10px;
+            }
+        }
+        .social
+        {
+            position: relative;
+            left: 20px;
+            top: 5px;
+            
+            .content a
+            {
+                width: 32px;
+                height: 30px;
+                background-size: 100% 100%;
+                margin: 0 6px;
+            }
+        }
+        .site-by-cci
+        {
+            position: absolute;
+            top: auto;
+            bottom: 15px;
+            left: 0;
+            width: 100%;
+            text-align: center;
+        }
+    }
+    
+    body.front .main-wrapper
+    {
+        height: auto;
+    }
+    .view-primary-circles,
+    .view-red-circles,
+    .view-secondary-circles
+    {
+        .views-row
+        {
+            position: static;
+            margin: 15px 0;
+            clear: both;
+            overflow: visible;
+            
+            & > div
+            {
+                position: relative;
+            }
+        }
+    }
+    .view-secondary-circles
+    {
+        .views-row
+        {
+            padding: 0;
+            
+            & > div
+            {
+                padding: 30px 0;
+            }
+        }
+        .views-field-nothing-1
+        {
+            left: -20px;
+            right: -20px;
+            width: auto;
+        }
+    }
+    .view-primary-circles.view-display-id-block_1 .views-row-2,
+    .view-primary-circles.view-display-id-block_2 .views-row,
+    .view-primary-circles.view-display-id-block_3 .views-row
+    {
+        float: right;
+    }
+    #block-views-photo-circles-block,
+    .region-content .circle
+    {
+        display: none;
+    }
+    
+    .view-about-us-content .views-row
+    {
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        position: fixed;
+        z-index: 200;
+        padding-top: 25px;
+        
+        .close
+        {
+            top: 5px;
+            right: 5px;
+        }
+        
+        .views-field-body
+        {
+            position: absolute;
+            top: 80px;
+            left: 20px;
+            right: 20px;
+            bottom: 20px;
+            
+            & > div
+            {
+                position: absolute;
+                left: 20px;
+                top: 20px;
+                right: 20px;
+                bottom: 20px;
+                overflow: auto;
+            }
+        }
+    }
+    
+    .view-staff-content
+    {
+        .views-field-field-image
+        {
+            float: none;
+            margin: 0 auto;
+        }
+        
+        .body-container
+        {
+            padding-top: 10px;
+            
+            &:before
+            {
+                position: static;
+                margin: 0 auto;
+                border-width: 0 28px 28px 28px;
+                border-color: transparent transparent $blue-navy transparent;
+            }
+        }
+    }
+    
+    .view-program
+    {
+        .views-field-title
+        {
+            float: none;
+            width: auto;
+            margin-right: 0;
+            margin-bottom: 10px;
+            
+            h2
+            {
+                display: inline-block;
+            }
+        }
+        .buttons
+        {
+            float: none;
+            margin: 0 auto;
+        }
+        .views-field-field-image img
+        {
+            display: block;
+            float: none;
+            margin: 10px auto;
+        }
+        .views-field-body:before
+        {
+            margin: 0 auto;
+            position: static;
+            border-width: 0 28px 28px 28px;
+            border-color: transparent transparent $blue-navy transparent;
+        }
+        .views-field-field-youtube-video-id
+        {
+            margin-top: 10px;
+        }
+    }
+    
+    body.node-type-page.volunteer .region-content
+    {
+        padding-top: 60px;
+    }
+    .block.volunteer-apply-now
+    {
+        position: static;
+        text-align: center;
+        margin-top: -100px;
+        margin-bottom: 40px;
+    }
+    
+    .view-news,
+    .view-news-page,
+    .view-events,
+    .view-event,
+    .view-archived-newsletters
+    {
+        .views-field-field-image
+        {
+            float: none;
+            width: 156px;
+            margin: 0 auto;
+        }
+        .views-field-the-rest:before
+        {
+            position: static;
+            margin: 0 auto;
+            border-width: 0 28px 28px 28px;
+            border-color: transparent transparent $blue-navy transparent;
+            width: 0;
+            height: 0;
+        }
+    }
+    
+    .view-photo-galleries
+    {
+        .views-field-field-photos img
+        {
+            float: none;
+            margin: 0 auto;
+        }
+        .views-field-title
+        {
+            position: static;
+            margin-top: 10px;
+            
+            &:before
+            {
+                position: static;
+                margin: 0 auto;
+                border-width: 0 28px 28px 28px;
+                border-color: transparent transparent $blue-navy transparent;
+            }
+        }
+    }
+    
+    .view-i-am-rebound
+    {
+        .views-field-field-image img
+        {
+            float: none;
+            margin: 0 auto;
+        }
+        .views-field-body
+        {
+            margin-top: 10px;
+            
+            &:before
+            {
+                position: static;
+                margin: 0 auto;
+                border-width: 0 28px 28px 28px;
+                border-color: transparent transparent $blue-navy transparent;
+            }
+        }
+        .views-field-field-youtube-video-id
+        {
+            padding-left: 0;
+        }
+    }
+    
+    .view-secondary-circles,
+    .view-secondary-circles.view-display-id-block
+    {
+        .views-field-field-image img
+        {
+            float: none;
+            margin: 0 auto;
+        }
+        
+        .views-field-nothing
+        {
+            &:before
+            {
+                position: static;
+                margin: 10px auto 0 auto;
+                border-width: 0 28px 28px 28px;
+                border-color: transparent transparent $blue-navy transparent;
+            }
+            & > div
+            {
+                padding: 20px;
+            }
+        }
+    }
+    
+    .view-programs-row:hover
+    {
+        .views-field-title
+        {
+            display: inline-block;
+        }
+        
+        .views-field-nothing
+        {
+            display: none;
+        }
+        
+        .views-field-field-image
+        {
+            display: block;
+        }
+    }
+    .view-about-us-row:hover
+    {
+        background-color: transparent;
+        
+        .views-field-title
+        {
+            display: inline-block;
+        }
+        
+        .views-field-body
+        {
+            display: none;
+        }
+    }
+    .view-staff
+    {
+        .page-title
+        {
+            text-align: center;
+        }
+        h1
+        {
+            display: inline-block;
+            margin-bottom: 0;
+        }
+        .view-content
+        {
+            display: none;
+        }
+    }
+}
+
+
+
+@media screen and (max-width:480px)
+{
+    .view-events .view-header .button
+    {
+        float: left;
+        clear: both;
+        margin-bottom: 20px;
+    }
+    
+    body.front #block-block-12>.content
+    {
+        width: 280px;
+        height: 280px;
+        padding: 20px;
+        margin-top: -160px;
+        margin-left: -160px;
+        font-size: 1.8em;
+    }
+    
+    #gmap
+    {
+        height: 320px;
+    }
+}
+
+
+
+@media screen and (max-width:350px)
+{
+    .footer
+    {
+        .address,
+        .phone,
+        .email,
+        .donate
+        {
+            width: 120px;
+        }
+        .social
+        {
+            left: 15px;
+        }
+        .logo img
+        {
+            width: 115px;
+            height: auto;
+        }
+        .logos a
+        {
+            margin: 0 2px;
+        }
     }
 }
