--- a/sites/all/themes/rebound/sass/_main.scss
+++ b/sites/all/themes/rebound/sass/_main.scss
@@ -23,13 +23,23 @@ a
     font-weight: bold;
 }
 
-.region-content p
+.region-content
 {
-    margin-bottom: 0.75em;
-    
-    &:last-child
+    p,
+    ul,
+    ol
     {
-        margin-bottom: 0;
+        margin-bottom: 0.75em;
+        
+        &:last-child
+        {
+            margin-bottom: 0;
+        }
+    }
+    ul,
+    ol
+    {
+        margin-left: 20px;
     }
 }
 
