--- a/sites/all/themes/rebound/sass/_header.scss
+++ b/sites/all/themes/rebound/sass/_header.scss
@@ -14,7 +14,7 @@
     
     a
     {
-        color:white;
+        color: white;
         text-decoration: none;
         font-weight: bold;
     }
@@ -25,7 +25,7 @@
         float: left;
         height: 99px;
         width: 115px;
-        background:$blue-medium;
+        background: $blue-medium;
         position: relative;
         text-align: center;
         z-index: 1;
@@ -37,12 +37,12 @@
             width: 9999px;
             height: 100%;
             right: 100%;
-            background:$blue-medium;
+            background: $blue-medium;
         }
         
         &:after
         {
-            content:"";
+            content: "";
             position: absolute;
             width: 0;
             height: 0;
@@ -171,6 +171,9 @@
             font-size: 0;
             color: transparent;
             padding-left: 0;
+            vertical-align: top;
+            position: relative;
+            top: 3px;
         }
         .facebook
         {
