--- a/sites/all/themes/rebound/sass/_views.scss
+++ b/sites/all/themes/rebound/sass/_views.scss
@@ -24,6 +24,8 @@
     transform: none !important;
     -webkit-transform: none !important;
     
+    behavior: url(/sites/all/themes/rebound/css/PIE.htc);
+    
     & > div
     {
         width: 230px;
@@ -33,6 +35,8 @@
         display: table-cell;
         vertical-align: middle;
         text-align: center;
+        
+        behavior: url(/sites/all/themes/rebound/css/PIE.htc);
     }
     
     &:hover
@@ -57,6 +61,8 @@
         line-height: 85%;
         font-weight: bold;
         font-size: 0.9em;
+        position: relative;
+        z-index: 0;
         
         .read-more
         {
@@ -87,7 +93,8 @@
         top: 0;
         width: 100%;
         height: 100%;
-        z-index: 1;
+        z-index: 100;
+        font-size: 0;
         text-decoration: none;
     }
 }
@@ -212,6 +219,8 @@
     transform: none !important;
     -webkit-transform: none !important;
     
+    behavior: url(/sites/all/themes/rebound/css/PIE.htc);
+    
     & > div
     {
         width: 230px;
@@ -221,6 +230,8 @@
         display: table-cell;
         vertical-align: middle;
         text-align: center;
+        
+        behavior: url(/sites/all/themes/rebound/css/PIE.htc);
     }
     
     &:hover
@@ -284,6 +295,8 @@
         width: 230px;
         height: 230px;
         border-radius: 115px;
+        
+        behavior: url(/sites/all/themes/rebound/css/PIE.htc);
     }
     
     .views-field-path a
@@ -441,6 +454,8 @@
         width: 200px;
         height: 200px;
         margin-right: 70px;
+        
+        behavior: url(/sites/all/themes/rebound/css/PIE.htc);
     }
     
     .close
@@ -480,11 +495,14 @@
             margin-top: -22px;
             background-repeat: no-repeat;
             z-index: 1;
+            border-radius: 30px;
+            
+            
+            behavior: url(/sites/all/themes/rebound/css/PIE.htc);
             
             &:focus
             {
                 border: 2px solid white;
-                border-radius: 30px;
                 margin: -24px 0 0 0;
             }
         }
@@ -521,6 +539,8 @@
             display: block;
             border-radius: 59px;
             border: 2px solid white;
+            
+            behavior: url(/sites/all/themes/rebound/css/PIE.htc);
         }
     }
 }
@@ -550,6 +570,8 @@
         min-height: 170px;
         background: url(../img/logo-rebound.png) no-repeat top center;
         background-size: 156px 156px;
+        
+        behavior: url(/sites/all/themes/rebound/css/backgroundsize.min.htc);
         
         img
         {
@@ -611,6 +633,8 @@
         width: 40px;
         padding: 10px 9px 10px 11px;
         text-align: center;
+        
+        behavior: url(/sites/all/themes/rebound/css/PIE.htc);
         
         .month
         {
@@ -785,6 +809,8 @@
             margin-right: 80px;
             position: relative;
             z-index: 1;
+            
+            behavior: url(/sites/all/themes/rebound/css/PIE.htc);
         }
     }
     
@@ -867,11 +893,15 @@
         z-index: 2;
         border-radius: 150px;
         overflow: hidden;
+        
+        behavior: url(/sites/all/themes/rebound/css/PIE.htc);
     }
     
     .views-field-field-image img
     {
         border-radius: 150px;
+        
+        behavior: url(/sites/all/themes/rebound/css/PIE.htc);
     }
     
     .views-field-field-link
@@ -887,6 +917,8 @@
         border-radius: 150px;
         text-align: center;
         
+        behavior: url(/sites/all/themes/rebound/css/PIE.htc);
+        
         & > div
         {
             position: absolute;
@@ -896,6 +928,8 @@
             bottom: 10px;
             background: $blue-medium;
             border-radius: 130px;
+            
+            behavior: url(/sites/all/themes/rebound/css/PIE.htc);
         }
         
         a
@@ -910,6 +944,8 @@
             border-radius: 150px;
             text-decoration: none;
             color: white;
+            
+            behavior: url(/sites/all/themes/rebound/css/PIE.htc);
             
             & > div
             {
@@ -1021,6 +1057,8 @@
         position: relative;
         z-index: 3;
         margin: 0 50px 0 0;
+        
+        behavior: url(/sites/all/themes/rebound/css/PIE.htc);
     }
     &.view-display-id-block
     {
@@ -1138,6 +1176,8 @@
             margin-top: 0;
             margin-left: 0;
             transition: all 1s ease-in-out;
+            
+            behavior: url(/sites/all/themes/rebound/css/PIE.htc);
         }
     }
     
@@ -1176,6 +1216,8 @@
         overflow: hidden;
         z-index: 1;
         
+        behavior: url(/sites/all/themes/rebound/css/PIE.htc);
+        
         & > div
         {
             border-radius: 75px;
@@ -1184,6 +1226,8 @@
             top: 0;
             right: 0;
             bottom: 0;
+            
+            behavior: url(/sites/all/themes/rebound/css/PIE.htc);
         }
     }
     
@@ -1192,6 +1236,8 @@
         border-radius: 75px;
         opacity: 0;
         transition: opacity 0.3s;
+        
+        behavior: url(/sites/all/themes/rebound/css/PIE.htc);
         
         &:hover
         {
@@ -1259,6 +1305,10 @@
         }
     }
     
+    .views-field-nothing
+    {
+        -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=75)";
+    }
     .body
     {
         display: table-cell;
@@ -1273,6 +1323,7 @@
     {
         position: relative;
         z-index: 1;
+        -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
     }
     .views-field-field-last-name
     {
@@ -1280,6 +1331,7 @@
         z-index: 1;
         border-bottom: 1px solid white;
         padding-bottom: 2px;
+        -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
     }
     .views-field-field-title
     {
@@ -1287,6 +1339,7 @@
         z-index: 1;
         font-style: italic;
         padding-top: 2px;
+        -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
     }
     
     a
@@ -1341,7 +1394,7 @@
         
         img
         {
-            border-radius: 220px
+            border-radius: 220px;
         }
     }
     
