Replace about us popups with new pages
close #1

--- a/sites/all/themes/rebound/sass/_main.scss
+++ b/sites/all/themes/rebound/sass/_main.scss
@@ -79,7 +79,8 @@ a
 }
 
 body.node-type-page.not-front,
-body.node-type-webform
+body.node-type-webform,
+body.node-type-about-us
 {
     .page-title
     {
