Minimum height for i-am-rebound rows to match the arrow
close #2

--- a/sites/all/themes/rebound/sass/_views.scss
+++ b/sites/all/themes/rebound/sass/_views.scss
@@ -1511,6 +1511,7 @@
             overflow: hidden;
             background: $blue-navy;
             padding: 15px;
+            min-height: 32px;
         }
     }
     
