--- a/sites/all/themes/rebound/sass/_views.scss
+++ b/sites/all/themes/rebound/sass/_views.scss
@@ -740,9 +740,10 @@
             height: 220px;
             border-radius: 110px;
             float: left;
-            margin-right: 80px;
+            margin-right: 72px;
             position: relative;
             z-index: 1;
+            border: 4px solid white;
             
             behavior: url(/sites/all/themes/rebound/css/PIE.htc);
         }
@@ -791,6 +792,15 @@
 {
     overflow: hidden;
     
+    .view-header .button
+    {
+        margin-bottom: 20px;
+    }
+    .view-footer .button
+    {
+        margin-top: 20px;
+    }
+    
     .views-field-field-photos ul
     {
         list-style: none;
@@ -802,13 +812,14 @@
         {
             list-style: none;
             margin: 0;
-            padding: 7px;
+            padding: 3px;
             display: inline-block;
             
             img
             {
                 display: block;
                 border-radius: 110px;
+                border: 4px solid white;
             }
         }
     }
