--- a/sites/all/themes/rebound/sass/_views.scss
+++ b/sites/all/themes/rebound/sass/_views.scss
@@ -773,13 +773,14 @@
             background: $blue-navy;
             overflow: hidden;
             padding: 15px;
-            font-size: 2em;
         }
         
         a
         {
             color: white;
             text-decoration: none;
+            font-size: 2em;
+            font-weight: 500;
             
             &:hover, &:focus
             {
