Increase width of calendar on mobile
see issue #15

--- a/sites/all/themes/rebound/sass/_responsive.scss
+++ b/sites/all/themes/rebound/sass/_responsive.scss
@@ -901,6 +901,16 @@
     {
         height: 320px;
     }
+    
+    body.calendar
+    {
+        .main-wrapper>div>div,
+        .main-wrapper #block-system-main
+        {
+            padding-left: 0;
+            padding-right: 0;
+        }
+    }
 }
 
 
