Fit the I Am Rebound title on one line (iOS)
close #17

--- a/sites/all/themes/rebound/sass/_responsive.scss
+++ b/sites/all/themes/rebound/sass/_responsive.scss
@@ -951,4 +951,13 @@
             margin: 0 2px;
         }
     }
+    
+    body.i-am-rebound
+    {
+        .page-wrapper .page-title h1,
+        .view-i-am-rebound .views-field-title h2
+        {
+            font-size: 2.25em;
+        }
+    }
 }
